# SQL-Data-Quality-OpenEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
tests/: test_environment.py
